# shak3d

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
shaders/: fragkkar.glsl  vershak.glsl
shak3d/: CMakeLists.txt  Game.cpp  Game.hpp  SDL_Init.hpp  enum_to_str.hpp  main.cpp
shak3d/SDL2-Inputs/: inputs.cpp  inputs.hpp
shak3d/SDL2_GL/: context.hpp  funcs.hpp  shader_compiler.hpp
shak3d/Util/: math.hpp  model_types.hpp  obj_loader.hpp
